--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="contact-buttons">
                     <a class="btn" href="https://www.roblox.com/users/3997298568/profile" target="_blank">Roblox</a>
                     <a class="btn" href="https://www.tiktok.com/@mh.portfolio?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a>
-                    <a class="btn" href="mailto:MH.Portfolio@gmail.com">Email</a>
+                    <a class="btn" href="mailto:MH.Portfolio223@gmail.com">Email</a>
                 </div>
             </section>
         </div>
