--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>MH-Portfolio</h1>
         <nav aria-label="Main Navigation">
             <ul>
-                <li><a href="#" data-section="home">Home</a></li>
-                <li><a href="#" data-section="about">About</a></li>
-                <li><a href="#" data-section="projects">Projects</a></li>
-                <li><a href="#" data-section="contact">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -71,9 +71,6 @@
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2024 My Portfolio</p>
-    </footer>
 
     <script src="script.js"></script>
 </body>
