--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <h2>Skills</h2>
                 <ul>
                     <li><strong>Programming Languages:</strong> HTML, CSS, JavaScript, Lua</li>
-                    <li><strong>Tools and Technologies:</strong> Git, GitHub, Visual Studio Code</li>
-                    <li><strong>Soft Skills:</strong> Problem Solving, Team Collaboration, Communication</li>
+                    <li><strong>Tools and Technologies:</strong> Git, GitHub, Visual Studio Code, IOS, Android, Microsoft, Windows, Chrome OS, Social Media Platforms, Google docs, Slides, Sheets, and More!</li>
+                    <li><strong>Soft Skills:</strong> Problem Solving, Team Collaboration, Communication, Mltilingual, Fast learning, Critical thinking, Adaptability...</li>
                 </ul>
             </section>
         </div>
