--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2>About Me</h2>
                 <div class="about-content">
                     <div class="about-photo">
-                        <img src="https://i.ibb.co/G34NRQf/My-Image.jpg"  alt="Mirwais Hamidi" class="about-img">
+                        <img src="My Image.jpeg"  alt="Mirwais Hamidi" class="about-img">
                     </div>
                     <div class="about-text">
                         <p>
