--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 
             <section>
                 <h2>My Projects</h2>
-                <div class="project-grid">
+                <div class="section-box">
                     <div class="project">
                         <h3>Roblox Obby Game</h3>
                         <img src="https://i.ibb.co/rHk2z3v/roblox-obby-200x200-905.png" alt="Screenshot of Roblox Obby game">
@@ -38,7 +38,7 @@
             </section>
 
             <section>
-                <div class="project-grid">
+                <div class="section-box">
                     <div class="project">
                         <h3>Roblox Clicker Game</h3>
                         <img src="https://i.ibb.co/GVBFTRS/clickergpg.jpg" alt="Screenshot of Roblox Clicker game">
@@ -50,7 +50,7 @@
             </section>
 
             <section>
-                <div class="project-grid">
+                <div class="section-box">
                     <div class="project">
                       <h3>Afghan Comm</h3>
                       <img src="https://i.ibb.co/0DDFQdb/ACM-logo.png" alt="Website Logo">
