--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <title>MH-Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">    
 </head>
 <body>
     <header>
@@ -30,10 +31,16 @@
                 <h2>Contact Me</h2>
                 <p>Feel free to reach out to me through email or social media.</p>
                 <div class="contact-buttons">
-                    <a class="btn" href="https://www.roblox.com/users/3997298568/profile" target="_blank">Roblox</a>
-                    <a class="btn" href="https://www.tiktok.com/@mh.portfolio?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a>
-                    <a class="btn" href="mailto:MH.Portfolio223@gmail.com">Email</a>
-                </div>
+                    <a class="btn" href="https://www.roblox.com/users/3997298568/profile" target="_blank">
+                        <img src="roblox.png" alt="Roblox" width="50" height="50">
+                    </a>
+                    <a class="btn" href="https://www.tiktok.com/@mh.portfolio?is_from_webapp=1&sender_device=pc" target="_blank">
+                        <img src="tiktok.png" alt="TikTok" width="50" height="50">
+                    </a>
+                    <a class="btn" href="mailto:MH.Portfolio223@gmail.com">
+                        <img src="gmail.png" alt="Gmail" width="50" height="50">
+                    </a>
+                </div>                
             </section>
         </div>
 
@@ -54,7 +61,7 @@
                       <textarea id="text" name="message" rows="2" required></textarea>
                   </div>
                   <div class="form-group">
-                      <button type="submit">Submit</button>
+                      <button class="fa-solid fa-arrow-right-to-bracket" type="submit"></button>
                   </div>
               </form>
           </section>
