--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,9 @@
                         <img src="https://i.ibb.co/rHk2z3v/roblox-obby-200x200-905.png" alt="Screenshot of Roblox Obby game">
                         <p>This is one of my first attempts at designing and coding something. I understand if it's not the best, but it was my first time. You are welcome to join this Roblox experience and see what it is.</p>
                         <p><strong>Technologies Used:</strong> Lua, YouTube, ChatGPT</p>
-                        <a class="btn" href="https://www.roblox.com/games/17515393365/Impossible-Obby-By-TigerKing" target="_blank">View on Roblox</a>
+                        <a class="btn" href="https://www.roblox.com/games/17515393365/Impossible-Obby-By-TigerKing" target="_blank">
+                            <img src="roblox.png" alt="Roblox" width="50" height="50">
+                        </a>
                     </div>
                 </div>
             </section>
@@ -44,7 +46,9 @@
                         <img src="https://i.ibb.co/GVBFTRS/clickergpg.jpg" alt="Screenshot of Roblox Clicker game">
                         <p>This is my second project that I have worked on, and it is much better designed and scripted than the previous one. This game has better UI designs and more complex actions. I hope you enjoy this experience.</p>
                         <p><strong>Technologies Used:</strong> Lua, YouTube, ChatGPT</p>
-                        <a class="btn" href="https://www.roblox.com/games/17699785187/Click-Boss" target="_blank">View on Roblox</a>
+                        <a class="btn" href="https://www.roblox.com/games/17699785187/Click-Boss" target="_blank">
+                            <img src="roblox.png" alt="Roblox" width="50" height="50">
+                        </a>
                     </div>
                 </div>
             </section>
@@ -53,10 +57,12 @@
                 <div class="section-box">
                     <div class="project">
                       <h3>Afghan Comm</h3>
-                      <img src="https://i.ibb.co/0DDFQdb/ACM-logo.png" alt="Website Logo">
+                      <img class="logo" src="https://i.ibb.co/0DDFQdb/ACM-logo.png" alt="Website Logo">
                       <p>A website that helps low-income families and non English speakers learn english and get access to resources they might need. (still developing)</p>
                       <p><strong>Technologies Used:</strong>HTML, CSS, JavaScript, Node.js</p>
-                      <a class="btn" href="http://mirwais-h.github.io/Afghan-Comm" target="_blank">Open Website</a>
+                      <a class="btn" href="http://mirwais-h.github.io/Afghan-Comm" target="_blank">
+                        <img src="website.png" alt="Website" width="50" height="50">
+                    </a>
                   </div>
 
                 </div>
