--- a/skills.html
+++ b/skills.html
@@ -8,19 +8,30 @@
     <title>MH-Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <h1>MH-Portfolio</h1>
         <nav aria-label="Main Navigation">
-          <ul role="navigation">
-            <li><a href="index.html" class="nav-btn">Home</a></li>
-            <li><a href="about.html" class="nav-btn">About</a></li>
-            <li><a href="projects.html" class="nav-btn">Projects</a></li>
-            <li><a href="skills.html" class="nav-btn">Skills</a></li>
-            <li><a href="contact.html" class="nav-btn">Contact</a></li>            
-          </ul>
-      </nav>
+            <div class="nav-btns"></div>
+                <a class="nav-btns" href="index.html">
+                    <i class="fa-solid fa-house"></i>
+                </a>
+                <a class="nav-btns" href="about.html">
+                    <i class="fa-solid fa-address-card"></i>
+                </a>
+                <a class="nav-btns" href="projects.html">
+                    <i class="fa-solid fa-diagram-project"></i>
+                </a>
+                <a class="nav-btns" href="skills.html">
+                    <i class="fa-solid fa-clipboard-list"></i>
+                </a>
+                <a class="nav-btns" href="contact.html">
+                    <i class="fa-solid fa-phone"></i>
+                </a>      
+            </div>
+        </nav>
     </header>
         
         <div class="section-box" id="skills">
