--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="section-box" id="home">
         <section>
-            <h2>Welcome To My Portfolio</h2>
+            <h2>Welcome</h2>
             <p>
                 Hello and welcome to MH-Portfolio! I'm thrilled that you've taken the time to visit my site. My name is Mirwais Hamidi, and I'm currently a high school sophomore with a passion for designing and programming. I created this portfolio to share my projects and skills with you.
             </p>
